Readability improved, closing modal color changed, html edited to avoid validation errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ body {
 }
 
 h2 {
+    font-size: 180%;
     text-shadow: 2px 2px black;
 }
 
@@ -48,7 +49,8 @@ h2 {
     justify-content: center;
     top: 20%;
     background-image: url("../images/forest.jpeg");
-    border: 1px solid rgb(255, 255, 255)
+    border: 1px solid rgb(255, 255, 255);
+    text-shadow: 1px 1px black;
 }
 
 .intro-btns {
@@ -63,6 +65,7 @@ h2 {
     width: 100px;
     justify-content: center;
     cursor: pointer;
+    font-family: 'Denk One', sans-serif;
 }
 
 #btn-PGF {
@@ -73,6 +76,8 @@ h2 {
     width: 100px;
     justify-content: center;
     cursor: pointer;
+    font-family: 'Denk One', sans-serif;
+
 }
 
 #btn-science {
@@ -83,6 +88,8 @@ h2 {
     width: 100px;
     justify-content: center;
     cursor: pointer;
+    font-family: 'Denk One', sans-serif;
+
 }
 
 #modal-close, #try-again {
@@ -93,6 +100,7 @@ h2 {
     width: 100px;
     justify-content: center;
     cursor: pointer;
+    font-family: 'Denk One', sans-serif;
 }
 
 /* blur overlay behind modals */
@@ -160,7 +168,8 @@ h2 {
     vertical-align: middle;
     line-height: 180%;
     text-align: center;
-    font-family: 'Alegreya Sans SC', sans-serif;;
+    font-family: 'Alegreya Sans SC', sans-serif;
+    text-shadow: 1px 1px black;
 }
 
 .answer-text {
@@ -171,6 +180,7 @@ h2 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    text-shadow: 1px 1px black;
 }
 
 .answers {
@@ -205,7 +215,7 @@ h2 {
     align-items: center;
     color: white;
     background: linear-gradient(rgb(34, 45, 120), rgb(75, 77, 97));
-    
+    text-shadow: 1px 1px black;
 }
 
 .score-tally {
@@ -218,6 +228,11 @@ h2 {
 #info-text {
     width: 90%;
     padding: 20px;
+    text-shadow: 1px 1px black;
+}
+
+#gameScore {
+    color:  rgb(116, 151, 200);
 }
 
 .answer:hover,
@@ -236,7 +251,6 @@ h2 {
 }
 
 .socials.mobile ul {
-    visibility: visible;
     display: flex;
     flex-direction: row;
     position: relative;
@@ -263,6 +277,10 @@ ul.networks {
 .networks i:hover {
     text-shadow: -1px 1px 12px #763943;
 }
+
+/* .fav-attribute {
+    opacity: 50%;
+} */
 
 @media screen and (max-width: 768px) {
 
